Maybe changed the page title

--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-<h1>Hello World</h1>
-<img src="images/train.jpg" alt="train">
+<head>
+	<title>Home of the Bountiful Bizon Buddies!</title>
+</head>
+
+<body>
+	<h1>Hello World</h1>
+	<img src="images/train.jpg" alt="train">
+</body>
