Trying out some music

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 
 <body>
 	<h1>Hello World</h1>
-	<img src="images/train.jpg" alt="train">
+	<img src="/images/train.jpg" alt="train">
+	<audio src="/music/banter.wav">
 </body>
