The music might autoplay

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 <body>
 	<h1>Hello World</h1>
 	<img src="/images/train.jpg" alt="train">
-	<audio src="/music/banter.wav">
+	<audio autoplay hidden>
+		<source src="/music/banter.wav">
+	</audio>
 </body>
