Changed the music a little

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<h1>Hello World</h1>
 	<img src="/images/train.jpg" alt="train">
 	<audio autoplay hidden>
-		<source src="/music/banter.wav">
+		<source src="/music/banter.mp3">
 	</audio>
 </body>
