Messing around with javascript

--- a/button.html
+++ b/button.html
@@ -6,11 +6,11 @@ layout: default
 <html>
 <body>
 
-<h2>My First JavaScript</h2>
+<h2>Hello there!</h2>
 
 <button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-Click me to display Date and Time.</button>
+onclick="document.getElementById('demo').innerHTML = 'succ'">
+Click me to blow your mind</button>
 
 <p id="demo"></p>
 
