Made some changes

--- a/button.html
+++ b/button.html
@@ -5,15 +5,20 @@ title: Testing Zone
 
 <!DOCTYPE html>
 <html>
+<head>
+
+    class 
+
+</head>
 <body>
 
-<h2>Hello there!</h2>
+    <h2>Hello there!</h2>
 
-<button type="button"
-onclick="document.getElementById('demo').innerHTML = 'succ'">
-Click me to blow your mind</button>
+    <button type="button"
+    onclick="document.getElementById('demo').innerHTML = 'succ'">
+    Click me to blow your mind</button>
 
-<p id="demo"></p>
+    <p id="demo"></p>
 
 </body>
 </html> 
