--- a/fyp/gallery.html
+++ b/fyp/gallery.html
@@ -4,6 +4,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet"> 
     <link rel="stylesheet" href="src/style.css">
+    <title>&lambda;-term gallery</title>
 </head>
 <body>
 
