--- a/fyp/visualiser.html
+++ b/fyp/visualiser.html
@@ -4,7 +4,6 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
-    <title>&lambda;-term visualiser &middot; George Kaye</title>
 </head>
 <body>
 
@@ -34,15 +33,10 @@
 
     <h2 id="result"></h2>
 
-    <h3>Graph options</h3>
-    <input type="radio" id="labels-yes" name="labels" value="yes" onclick = "updateLabels(true);" checked />
-    <label for="labels-yes">Show labels</label>
-
-    <input type="radio" id="labels-no" name="labels" onclick = "updateLabels(false);" value="no" />
-    <label for="labels-no">No labels</label>
-
     <p id = "church-room"></p>
     <p id = "normalisation-studio"></p>
+
+    <img id = "image" src="">
 
     <script src = "src/definition.js"></script>
     <script src = "src/parser.js"></script>
