Added CLA slides

--- a/pages/fyp/gallery.html
+++ b/pages/fyp/gallery.html
@@ -15,7 +15,7 @@
 
         <p>Graph display powerered by <a href="http://js.cytoscape.org/">Cytoscape.js</a></p>
 
-        The underlying algorithms behind the term generators can be found <a href="Generator.hs">here</a> (in Haskell!).
+        The underlying algorithms behind the term generators can be found <a href="src/Generator.hs">here</a> (in Haskell!).
 
         <h2>&lambda; term generators</h2>
         n <input type = "text" class = "number-box" id = "n"> k <input type = "text" class = "number-box" id = "k">
