Added sorting to fyp

--- a/pages/fyp/gallery.html
+++ b/pages/fyp/gallery.html
@@ -4,7 +4,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet"> 
     <link rel="stylesheet" href="src/style.css">
-    <title>&lambda;-term gallery &middot; George Kaye</title>
+    <title>&lambda;-term visualiser &middot; George Kaye</title>
 </head>
 <body>
 
@@ -15,13 +15,14 @@
 
         <p>Graph display powerered by <a href="http://js.cytoscape.org/">Cytoscape.js</a></p>
 
-        The underlying algorithms behind the term generators can be found <a href="src/Generator.hs">here</a> (in Haskell!).
+        The underlying algorithms behind the term generators can be found <a href="Generator.hs">here</a> (in Haskell!).
 
         <h2>&lambda; term generators</h2>
         n <input type = "text" class = "number-box" id = "n"> k <input type = "text" class = "number-box" id = "k">
         <button type = "button" id = "generate-btn" onclick = "generateButton(0, false);">Pure</button>
         <button type = "button" id = "generate-btn" onclick = "generateButton(1, false);">Linear</button>
         <button type = "button" id = "generate-btn" onclick = "generateButton(2, false);">Planar</button> 
+        <h3 id = "error"></h3>
 
         <p>You might need to be patient for larger values of n and k while the maps are drawn. For n > 10 be prepared to wait a while, or until the universe collapses!</p>
         <p>For larger terms, you may wish to disable map generation to speed up the process a bit.</p>
@@ -30,12 +31,20 @@
         <p>Draw maps (costly)<input type = "checkbox" id = "draw" checked></p>
         <p>Use de Bruijn notation<input type = "checkbox" id = "de-bruijn"></p>
 
-        <h3>Filtering options</h3>
+        <h3 id = "filtering-options">Filtering options</h3>
         Crossings <input type = "text" class = "number-box" id = "crossings">
         Abstractions <input type = "text" class = "number-box" id = "abstractions">
         Applications <input type = "text" class = "number-box" id = "applications">
         Variables <input type = "text" class = "number-box" id = "variables">
         &beta;-redexes<input type = "text" class = "number-box" id = "betas">
+        Sort <select id="sort">
+            <option value=0>Default</value>
+            <option value=1>Crossings: High-Low</value>
+            <option value=2>Crossings: Low-High</value>
+            <option value=3>Beta-redexes: High-Low</value>
+            <option value=4>Beta-redexes: Low-High</value>
+        <select>
+        <button type = "button" id = "sort-btn" onclick = 'filterAndSortButton()' disabled>Filter and sort</button>
 
         <b><p id = "number-of-terms"></p></b>
         <b><p id = "help"></p></b>
