Fixed the redirects, hopefully

--- a/pages/fyp/redirect2.html
+++ b/pages/fyp/redirect2.html
@@ -2,4 +2,4 @@
 permalink: /fyp/gallery
 ---
 
-<meta http-equiv=Refresh content=0; url=/pages/fyp/gallery.html> 
+<meta http-equiv="Refresh" content="0; url=/pages/fyp/gallery.html"> 
