--- a/pages/fyp/redirect1.html
+++ b/pages/fyp/redirect1.html
@@ -2,4 +2,4 @@
 permalink: /fyp/visualiser
 ---
 
-<meta http-equiv=Refresh content=0; url=/pages/fyp/visualiser.html> 
+<meta http-equiv="Refresh" content="0; url=/pages/fyp/visualiser.html"> 
