Swapped around the redirects so urls are cleaner

--- a/pages/fyp/gallery.html
+++ b/pages/fyp/gallery.html
@@ -1,9 +1,13 @@
+---
+permalink: /fyp/gallery
+---
+
 <!DOCTYPE html>
 <meta charset="UTF-8">
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet"> 
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="/pages/fyp/src/style.css">
     <title>&lambda;-term visualiser &middot; George Kaye</title>
 </head>
 <body>
@@ -11,7 +15,7 @@
     <div class = "column gallery-column">
         <h1>&lambda;-term gallery</h1>
 
-        <p><b><a href="visualiser.html">&lambda;-term visualiser</a></b></p>
+        <p><b><a href="/fyp/visualiser">&lambda;-term visualiser</a></b></p>
 
         <p>Graph display powerered by <a href="http://js.cytoscape.org/">Cytoscape.js</a></p>
 
@@ -53,15 +57,15 @@
         <p id = "normalisation-studio"></p>
     </div>
 
-    <script src = "src/definition.js"></script>
-    <script src = "src/parser.js"></script>
-    <script src = "src/cytoscape.min.js"></script>
-    <script src = "src/graph.js"></script>
-    <script src = "src/html.js"></script>
-    <script src = "src/sharedFunctions.js"></script>
-    <script src = "src/galleryFunctions.js"></script>
-    <script src = "src/evaluator.js"></script>
-    <script src = "src/generator.js"></script>
+    <script src = "/pages/fyp/src/definition.js"></script>
+    <script src = "/pages/fyp/src/parser.js"></script>
+    <script src = "/pages/fyp/src/cytoscape.min.js"></script>
+    <script src = "/pages/fyp/src/graph.js"></script>
+    <script src = "/pages/fyp/src/html.js"></script>
+    <script src = "/pages/fyp/src/sharedFunctions.js"></script>
+    <script src = "/pages/fyp/src/galleryFunctions.js"></script>
+    <script src = "/pages/fyp/src/evaluator.js"></script>
+    <script src = "/pages/fyp/src/generator.js"></script>
 
 </body>
 </html> 
