--- a/pages/fyp/redirect1.html
+++ b/pages/fyp/redirect1.html
@@ -1,5 +1,5 @@
 ---
-permalink: /fyp/visualiser
+permalink: /pages/fyp/visualiser
 ---
 
-<meta http-equiv="Refresh" content="0; url=/pages/fyp/visualiser.html"> 
+<meta http-equiv="Refresh" content="0; url=/fyp/visualiser.html"> 
