--- a/pages/fyp/redirect2.html
+++ b/pages/fyp/redirect2.html
@@ -1,5 +1,5 @@
 ---
-permalink: /fyp/gallery
+permalink: /pages/fyp/gallery
 ---
 
-<meta http-equiv="Refresh" content="0; url=/pages/fyp/gallery.html"> 
+<meta http-equiv="Refresh" content="0; url=/fyp/gallery"> 
