--- a/pages/lambda-visualiser/visualiser.html
+++ b/pages/lambda-visualiser/visualiser.html
@@ -7,57 +7,55 @@ permalink: /lambda-visualiser/visualiser
 <html>
 
 <head>
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
-        <link rel="stylesheet" href="/pages/lambda-visualiser/src/style.css">
-        <title>&lambda;-term visualiser &middot; George Kaye</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 
 <body>
 
-        <h1>&lambda;-term visualiser</h1>
+    <h1>&lambda;-term visualiser</h1>
 
-        <p><b><a href="/fyp/gallery">&lambda;-term gallery</a></b></p>
+    <p><b><a href="/lambda-visualiser/gallery">&lambda;-term gallery</a></b></p>
 
-        <p>Graph display powerered by <a href="http://js.cytoscape.org/">Cytoscape.js</a></p>
+    <p>Graph display powerered by <a href="http://js.cytoscape.org/">Cytoscape.js</a></p>
 
-        <p>Type a term t and an environment &Gamma; below!</p>
+    <p>Type a term t and an environment &Gamma; below!</p>
 
-        <p><b>Example:</b> (&lambda;x. &lambda;y. x y) a b
-                <br>t = (\x. \y. x y) a b
-                <br>&Gamma; = a b</b>
+    <p><b>Example:</b> (&lambda;x. &lambda;y. x y) a b
+        <br>t = (\x. \y. x y) a b
+        <br>&Gamma; = a b</b>
 
-                <p>t = <input type="text" id="input"> &Gamma; = <input type="text" id="env"></p>
+        <p>t = <input type="text" id="input"> &Gamma; = <input type="text" id="env"></p>
 
-                <p>Define an alias <input type="text" id="function-name"> = <input type="text" id="function-body">
-                        <button type="button" id="function-btn" onclick="defineFunction();">Define</button></p>
+        <p>Define an alias <input type="text" id="function-name"> = <input type="text" id="function-body"> <button
+                type="button" id="function-btn" onclick="defineFunction();">Define</button></p>
 
-                <p id="bulk"><button type="button" id="bulk-btn" onclick="revealBulkButton();">Bulk define
-                                aliases</button><button type="button" id="clear-all-btn"
-                                onclick="removeFunctionsButton();">Clear
-                                all</button></p>
+        <p id="bulk"><button type="button" id="bulk-btn" onclick="revealBulkButton();">Bulk define
+                aliases</button><button type="button" id="clear-all-btn" onclick="removeFunctionsButton();">Clear
+                all</button></p>
 
-                <p id="function-list"></p>
+        <p id="function-list"></p>
 
-                <button type="button" id="execute-btn" onclick="executeButton();">Execute</button>
+        <button type="button" id="execute-btn" onclick="executeButton();">Execute</button>
 
-                <br>
+        <br>
 
-                <h2 id="result"></h2>
+        <h2 id="result"></h2>
 
-                <p id="church-room"></p>
-                <p id="normalisation-studio"></p>
+        <p id="church-room"></p>
+        <p id="normalisation-studio"></p>
 
-                <img id="image" src="">
+        <img id="image" src="">
 
-                <script src="/pages/lambda-visualiser/src/definition.js"></script>
-                <script src="/pages/lambda-visualiser/src/parser.js"></script>
-                <script src="/pages/lambda-visualiser/src/cytoscape.min.js"></script>
-                <script src="/pages/lambda-visualiser/src/graph.js"></script>
-                <script src="/pages/lambda-visualiser/src/html.js"></script>
-                <script src="/pages/lambda-visualiser/src/sharedFunctions.js"></script>
-                <script src="/pages/lambda-visualiser/src/visualiserFunctions.js"></script>
-                <script src="/pages/lambda-visualiser/src/evaluator.js"></script>
-                <script src="/pages/lambda-visualiser/src/generator.js"></script>
+        <script src="/pages/lambda-visualiser/src/definition.js"></script>
+        <script src="/pages/lambda-visualiser/src/parser.js"></script>
+        <script src="/pages/lambda-visualiser/src/cytoscape.min.js"></script>
+        <script src="/pages/lambda-visualiser/src/graph.js"></script>
+        <script src="/pages/lambda-visualiser/src/html.js"></script>
+        <script src="/pages/lambda-visualiser/src/sharedFunctions.js"></script>
+        <script src="/pages/lambda-visualiser/src/visualiserFunctions.js"></script>
+        <script src="/pages/lambda-visualiser/src/evaluator.js"></script>
+        <script src="/pages/lambda-visualiser/src/generator.js"></script>
 
 </body>
 
