--- a/pages/lambda-visualiser/gallery.html
+++ b/pages/lambda-visualiser/gallery.html
@@ -8,7 +8,7 @@ permalink: /lambda-visualiser/gallery
 
 <head>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="/pages/lambda-visualiser/src/style.css">
 </head>
 
 <body>
