--- a/pages/lambda-visualiser/gallery.html
+++ b/pages/lambda-visualiser/gallery.html
@@ -30,7 +30,7 @@ title: Lambda-term gallery
         <label for="pure">Pure</label>
         <input type="radio" id="linear" name="fragment" value="linear">
         <label for="pure">Linear</label>
-        <input type="radio" id="planar" name="fragment" value="planar">
+        <input type="radio" id="planar" checked name="fragment" value="planar">
         <label for="pure">Planar</label>
 
         <p>You might need to be patient for larger values of n and k while the maps are drawn. For n > 10 be
