Added the titles again

--- a/pages/lambda-visualiser/visualiser.html
+++ b/pages/lambda-visualiser/visualiser.html
@@ -8,6 +8,7 @@ title: Lambda-term visualiser
 <html>
 
 <head>
+    <title>Lambda-term visualiser</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
     <link rel="stylesheet" href="/pages/lambda-visualiser/src/style.css">
 </head>
