Continued making the website

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,13 @@
+---
+layout: default
+title: Home
+subtitle: Welcome to my website!
+---
+
 {% include index/intro %}
 {% include index/about %}
 {% include index/papers %}
-<!-- {% include index/talks %} {% include index/visits %} {% include index/teaching %} {% include index/misc %} -->
+{% include index/talks %}
+{% include index/visits %}
+{% include index/teaching %}
+{% include index/misc %}
