Paginated the stations page

--- a/src/pages/stations.html
+++ b/src/pages/stations.html
@@ -2,13 +2,22 @@
 layout: default
 title: Railway stations
 subtitle: I visit a lot of railway stations
-permalink: /stations/
+permalink: /stations/page-{{ pagination.pageNumber }}/
+pagination:
+  data: stations
+  size: 9
 ---
 
 <div class="stations">
-    {% for stn in stations %}
-    <div class="station">
+    {% for stn in pagination.items %}
         <img class="station-img" src="/images/trains/stations/{{ stn.crs }}.webp" />
-    </div>
     {% endfor %}
+</div>
+
+<div class="counter">
+    {%- for page in pagination.pages -%}
+    <a href={{- pagination.hrefs[forloop.index0] -}}><span class="page-number{% if pagination.pageNumber == forloop.index %} current-page" aria-current="page{%- endif -%}">
+    {{- forloop.index -}}
+    </span></a>
+    {%- endfor -%}
 </div>
