--- a/src/pages/stations.html
+++ b/src/pages/stations.html
@@ -2,7 +2,7 @@
 layout: default
 title: Railway stations
 subtitle: I visit a lot of railway stations
-permalink: /stations/page-{{ pagination.pageNumber }}/
+permalink: /stations/{% if pagination.pageNumber > 0 %}page-{{ pagination.pageNumber | increment }}/{% endif %}
 pagination:
   data: stations
   size: 9
@@ -14,10 +14,4 @@ pagination:
     {% endfor %}
 </div>
 
-<div class="counter">
-    {%- for page in pagination.pages -%}
-    <a href={{- pagination.hrefs[forloop.index0] -}}><span class="page-number{% if pagination.pageNumber == forloop.index %} current-page" aria-current="page{%- endif -%}">
-    {{- forloop.index -}}
-    </span></a>
-    {%- endfor -%}
-</div>
+{% include components/pagenumbers %}
