Did lots with the new tags system

--- a/src/pages/stations.html
+++ b/src/pages/stations.html
@@ -8,6 +8,8 @@ pagination:
   size: 9
 ---
 
+{% include components/pagenumbers %}
+
 <div class="stations">
     {% for stn in pagination.items %}
         <img class="station-img" src="/images/trains/stations/{{ stn.crs }}.webp" />
