--- a/src/pages/stations.html
+++ b/src/pages/stations.html
@@ -2,7 +2,7 @@
 layout: default
 title: Railway stations
 subtitle: I visit a lot of railway stations
-permalink: /stations/{% if pagination.pageNumber > 0 %}page-{{ pagination.pageNumber | increment }}/{% endif %}
+permalink: /stations/{% if pagination.pageNumber > 0 %}{{ pagination.pageNumber | increment }}/{% endif %}
 pagination:
   data: stations
   size: 9
