--- a/src/pages/trains/scenarios/scenario.html
+++ b/src/pages/trains/scenarios/scenario.html
@@ -1,6 +1,6 @@
 ---
 pagination: 
-  data: collections.scenarioList
+  data: scenarios
   size: 1
   alias: scenario
 permalink: /trains/scenarios/{{ scenario.headcode }}/
@@ -13,10 +13,21 @@ eleventyComputed:
 <div class="scenario-info">
     <div><b>Traction:</b> {{ scenario.traction }}</div>
     <div><b>TOC:</b> {{ scenario.toc }}</div>
-    <div><b>Route:</b> {{ scenario.route }}</div>
+    <div><b>Route:</b>
+        {% for route in scenario.routes %}
+            {{ dlc[route].name }}
+            {% if forloop.last %}{% else %}, {% endif %}
+        {% endfor %}
+    </div>
     <div><b>Traction:</b> {{ scenario.traction }}</div>
-    <div><b>Duration:</b> {{ scenario.duration }} mins</b></div>
-    <div><b>Difficulty:</b> {{ scenario.difficulty }}</div>
+    <div><b>Duration:</b> 
+        {% for part in scenario.duration %}
+            {{ part }} mins {% if forloop.index == 1 and forloop.last %}{% else %}(Part {{ forloop.index }}){% endif %} {% if forloop.last %}{% else %} / {% endif %}
+        {% endfor %}</div>
+    <div><b>Difficulty:</b>
+        {% for part in scenario.difficulty %}
+        {{ part }} {% if forloop.index == 1 and forloop.last %}{% else %}(Part {{ forloop.index }}){% endif %} {% if forloop.last %}{% else %} / {% endif %}
+    {% endfor %}</div>
 </div>
 
 <p class="scenario-description">
@@ -79,6 +90,9 @@ eleventyComputed:
 {% assign entry=dlc[item.stock] %}
 <li>
     <a href="{{ entry.link }}" title="Download link for '{{ entry.name }}'">{{- entry.name -}}</a>
+    {% if item.part %}
+    (Part {{ item.part }})
+    {% endif %}
     {%- if item.optional -%}
     *
     {%- endif -%}
