--- a/src/pages/trains/stations.html
+++ b/src/pages/trains/stations.html
@@ -2,6 +2,7 @@
 title: Railway stations
 subtitle: I visit a lot of railway stations
 permalink: /trains/stations/{% if pagination.pageNumber > 0 %}{{ pagination.pageNumber | increment }}/{% endif %}
+style: stations
 pagination:
   data: stations
   size: 9
