--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -3,6 +3,7 @@ layout: default
 title: Blog
 subtitle: A compendium of wacky adventures and occasional seriousness
 permalink: /blog/{% if pagination.pageNumber > 0 %}{{ pagination.pageNumber | increment }}/{% endif %}
+style: blog
 pagination:
   data: collections.blog
   size: 5
