--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@ subtitle: Welcome to my website!
 
 {% include index/intro %}
 {% include index/about %}
+{% include index/news %}
 {% include index/papers %}
 {% include index/talks %}
 {% include index/visits %}
