Fixed the lambda visualiser being broken

--- a/src/apps/lamviz/gallery.html
+++ b/src/apps/lamviz/gallery.html
@@ -10,7 +10,7 @@ title: Lambda-term gallery
 <head>
     <title>Lambda-term gallery</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
-    <link rel="stylesheet" href="/pages/lambda-visualiser/src/style.css">
+    <link rel="stylesheet" href="/scripts/lamviz/style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@ title: Lambda-term gallery
     <div class="column gallery-column">
         <h1>&lambda;-term gallery</h1>
 
-        <p><b><a href="/lambda-visualiser/visualiser">&lambda;-term visualiser</a></b></p>
+        <p><b><a href="/lamviz/visualiser/">&lambda;-term visualiser</a></b></p>
 
         <p>Graph display powerered by <a href="http://js.cytoscape.org/">Cytoscape.js</a></p>
 
@@ -75,15 +75,15 @@ title: Lambda-term gallery
         <p id="normalisation-studio"></p>
     </div>
 
-    <script src="/pages/lambda-visualiser/src/definition.js"></script>
-    <script src="/pages/lambda-visualiser/src/parser.js"></script>
-    <script src="/pages/lambda-visualiser/src/cytoscape.min.js"></script>
-    <script src="/pages/lambda-visualiser/src/graph.js"></script>
-    <script src="/pages/lambda-visualiser/src/html.js"></script>
-    <script src="/pages/lambda-visualiser/src/sharedFunctions.js"></script>
-    <script src="/pages/lambda-visualiser/src/galleryFunctions.js"></script>
-    <script src="/pages/lambda-visualiser/src/evaluator.js"></script>
-    <script src="/pages/lambda-visualiser/src/generator.js"></script>
+    <script src="/scripts/lamviz/definition.js"></script>
+    <script src="/scripts/lamviz/parser.js"></script>
+    <script src="/scripts/lamviz/cytoscape.min.js"></script>
+    <script src="/scripts/lamviz/graph.js"></script>
+    <script src="/scripts/lamviz/html.js"></script>
+    <script src="/scripts/lamviz/sharedFunctions.js"></script>
+    <script src="/scripts/lamviz/galleryFunctions.js"></script>
+    <script src="/scripts/lamviz/evaluator.js"></script>
+    <script src="/scripts/lamviz/generator.js"></script>
 
 </body>
 
