--- a/src/apps/lamviz/visualiser.html
+++ b/src/apps/lamviz/visualiser.html
@@ -1,4 +1,5 @@
 ---
+template: none
 permalink: /lamviz/visualiser/
 title: Lambda-term visualiser
 ---
@@ -10,14 +11,14 @@ title: Lambda-term visualiser
 <head>
     <title>Lambda-term visualiser</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
-    <link rel="stylesheet" href="/pages/lambda-visualiser/src/style.css">
+    <link rel="stylesheet" href="/scripts/lamviz/style.css">
 </head>
 
 <body>
 
     <h1>&lambda;-term visualiser</h1>
 
-    <p><b><a href="/lambda-visualiser/gallery">&lambda;-term gallery</a></b></p>
+    <p><b><a href="/lamviz/gallery/">&lambda;-term gallery</a></b></p>
 
     <p>Graph display powerered by <a href="http://js.cytoscape.org/">Cytoscape.js</a></p>
 
@@ -49,15 +50,15 @@ title: Lambda-term visualiser
 
         <img id="image" src="">
 
-        <script src="/pages/lambda-visualiser/src/definition.js"></script>
-        <script src="/pages/lambda-visualiser/src/parser.js"></script>
-        <script src="/pages/lambda-visualiser/src/cytoscape.min.js"></script>
-        <script src="/pages/lambda-visualiser/src/graph.js"></script>
-        <script src="/pages/lambda-visualiser/src/html.js"></script>
-        <script src="/pages/lambda-visualiser/src/sharedFunctions.js"></script>
-        <script src="/pages/lambda-visualiser/src/visualiserFunctions.js"></script>
-        <script src="/pages/lambda-visualiser/src/evaluator.js"></script>
-        <script src="/pages/lambda-visualiser/src/generator.js"></script>
+        <script src="/scripts/lamviz/definition.js"></script>
+        <script src="/scripts/lamviz/parser.js"></script>
+        <script src="/scripts/lamviz/cytoscape.min.js"></script>
+        <script src="/scripts/lamviz/graph.js"></script>
+        <script src="/scripts/lamviz/html.js"></script>
+        <script src="/scripts/lamviz/sharedFunctions.js"></script>
+        <script src="/scripts/lamviz/visualiserFunctions.js"></script>
+        <script src="/scripts/lamviz/evaluator.js"></script>
+        <script src="/scripts/lamviz/generator.js"></script>
 
 </body>
 
