--- a/src/pages/trains/scenarios/scenarios.html
+++ b/src/pages/trains/scenarios/scenarios.html
@@ -4,7 +4,7 @@ permalink: /trains/scenarios/
 style: scenarios
 ---
 
-{% include components/pagenumbers %}
+{% include "components/pagenumbers" %}
 
 <p>On this page you can find all the Train Simulator scenarios I've made.</p>
 
