--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@ style: index
 subtitle: Welcome to my website!
 ---
 
-{% include index/intro %}
-{% include index/about %}
-{% include index/news %}
-{% include index/papers %}
-{% include index/talks %}
-{% include index/visits %}
-{% include index/teaching %}
-{% include index/misc %}
+{% include "index/intro" %}
+{% include "index/about" %}
+{% include "index/news" %}
+{% include "index/papers" %}
+{% include "index/talks" %}
+{% include "index/visits" %}
+{% include "index/teaching" %}
+{% include "index/misc" %}
