--- a/src/pages/tags.html
+++ b/src/pages/tags.html
@@ -4,7 +4,8 @@ pagination:
    size: 1
    alias: tag
 permalink: /blog/{{ tag.tagName }}/{% if tag.pageNumber > 0 %}{{ tag.pageNumber | increment }}/{% endif %}
-style: blog
+styles: 
+  - blog
 
 eleventyComputed:
    title: "Posts tagged '{{ tag.tagName }}'"
