--- a/src/pages/trains/scenarios/scenarios.html
+++ b/src/pages/trains/scenarios/scenarios.html
@@ -1,7 +1,8 @@
 ---
 title: Train simulator scenarios
 permalink: /trains/scenarios/
-style: scenarios
+styles: 
+  - scenarios
 ---
 
 {% include "components/pagenumbers" %}
