--- a/src/pages/trains/stations.html
+++ b/src/pages/trains/stations.html
@@ -2,7 +2,8 @@
 title: Railway stations
 subtitle: I visit a lot of railway stations
 permalink: /trains/stations/{% if pagination.pageNumber > 0 %}{{ pagination.pageNumber | increment }}/{% endif %}
-style: stations
+styles: 
+  - stations
 pagination:
   data: stations
   size: 12
