Update tom day jong

--- a/src/pages/tom-day-jong.html
+++ b/src/pages/tom-day-jong.html
@@ -4,6 +4,9 @@ title: Hello
 permalink: /events/tom-day-jong/
 ---
 
+    <title>Tom day Jong</title>
+    <link rel="icon" href="/images/de-jong-tom.jpg" type="image/ico" />
+
     <h1>Tom day Jong</h1>
     <h3>A workshop in honour of the submission of Tom's thesis</h4>
 
@@ -41,17 +44,12 @@ permalink: /events/tom-day-jong/
             <td>Bratby Bar, Staff House</td>
         </tr>
         <tr>
-            <td>18:00-20:00</td>
+            <td>18:00-23:00</td>
             <td>Social</td>
-            <td>Attic Brewery, Stirchley</td>
+            <td>Digbeth</td>
         </tr>
         <tr>
-            <td>20:00-22:00</td>
-            <td>Dinner</td>
-            <td>Alicia's Micro Bakehouse, Stirchley</td>
-        </tr>
-        <tr>
-            <td>23:00-</td>
+            <td>23:30-</td>
             <td>Social</td>
             <td>Snobs, City Centre</td>
         </tr>
