--- a/src/pages/tom-day-jong.html
+++ b/src/pages/tom-day-jong.html
@@ -25,7 +25,12 @@ permalink: /events/tom-day-jong/
     </p>
     <table>
         <tr>
-            <td>12:00-13:30</td>
+            <td>11:40-12:20</td>
+            <td>Tour</td>
+            <td>Computer Science Building</td>
+        </tr>
+        <tr>
+            <td>12:20-13:30</td>
             <td>Lunch</td>
             <td>Noble Room, Staff House</td>
         </tr>
@@ -39,19 +44,24 @@ permalink: /events/tom-day-jong/
             <td colspan="2">Questions</td>
         </tr>
         <tr>
-            <td>17:00-18:00</td>
+            <td>17:00-18:30</td>
             <td>Social</td>
             <td>Bratby Bar, Staff House</td>
         </tr>
         <tr>
-            <td>18:00-23:00</td>
+            <td>18:30-21:30</td>
             <td>Social</td>
-            <td>Digbeth</td>
+            <td>Lunar Springs, Digbeth</td>
         </tr>
         <tr>
-            <td>23:30-</td>
+            <td>21:30-22:30</td>
             <td>Social</td>
-            <td>Snobs, City Centre</td>
+            <td>Halton Turner Brewing Company, Digbeth</td>
+        </tr>
+        <tr>
+            <td>22:30-</td>
+            <td>Social</td>
+            <td>Zumhof Biergarten, Digbeth</td>
         </tr>
     </table>
 
