Update main to output generated at ec16521

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ This gives us a <em>graphical calculus</em> with which we can reason about circu
 I occasionally take photos of pretty things and put them on <a href="https://instagram.com/georgejkaye">Instagram</a>.
 If you want something less pretty, here are some <a href="/pictures">pictures of me</a>!
 I also use <a href="https://twitter.com/thegeorgejkaye">Twitter</a>.</p>
-<p>You might want to read <a href="/files/cv.pdf">mv CV</a>.</p>
+<p>You might want to read <a href="/files/cv.pdf">my CV</a>.</p>
 <h2>Contact me</h2>
 <ul>
 <li><strong>University email:</strong> g.j.kaye at <a href="http://pgr.bham.ac.uk">pgr.bham.ac.uk</a></li>
@@ -94,7 +94,7 @@ I also use <a href="https://twitter.com/thegeorgejkaye">Twitter</a>.</p>
 <li><a href="https://orcid.org/0000-0002-0515-4055"><strong>ORCiD</strong></a></li>
 <li><a href="https://twitter.com/thegeorgejkaye"><strong>Twitter</strong></a></li>
 <li><a href="https://instagram.com/georgejkaye"><strong>Instagram</strong></a></li>
-<li><a href="/adventures"><strong>Adventures in Academia</strong></a> <em>A serites of entertaining escapades</em></li>
+<li><a href="/adventures"><strong>Adventures in Academia</strong></a> <em>A series of entertaining escapades</em></li>
 <li><a href="/trains/stations"><strong>Railway station signs</strong></a> <em>I take pictures of station signs</em></li>
 </ul>
 <h2>Contributing</h2>
