Update main to output generated at ce3643e

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ I also use <a href="https://twitter.com/thegeorgejkaye">Twitter</a>.</p>
 </ul>
 <h2>Contributing</h2>
 <p>If you find a mistake, make an <a href="https://github.com/georgejkaye/georgejkaye.github.io/issues">issue</a> and I'll try to sort it out.
-Alternatively, you can fix it yourself with a <a href="https://github.com/georgejkaye/georgejkaye.github.io/pulls">pull request</a>!</p>
+Alternatively, you can figure out how my static site generator works and fix it yourself with a <a href="https://github.com/georgejkaye/georgejkaye.github.io/pulls">pull request</a>!</p>
 
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
