Update main to output generated at e18c04c

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   </div>
 </div>
   <div id="text" class="content container wide">
-    <p :="" class="mobile-picture"><img src="/images/me/me-3.webp" alt="A picture of me, with the Forth Bridge in the background"></p>
-<p :="" class="profile-picture"><img src="/images/me/me-3.webp" alt="A picture of me, with the Forth Bridge in the background"></p>
+    <p :="" class="mobile-picture"><a href="/images/fancam.mp4"><img src="/images/me/me-3.webp" alt="A picture of me, with the Forth Bridge in the background"></a></p>
+<p :="" class="profile-picture"><a href="/images/fancam.mp4"><img src="/images/me/me-3.webp" alt="A picture of me, with the Forth Bridge in the background"></a></p>
 <p>Hello! I’m George, a PhD student researcher at the University of Birmingham, under the supervision of <a href="https://www.cs.bham.ac.uk/~drg/">Dan Ghica</a> and <a href="https://www.cs.bham.ac.uk/~backensm/">Miriam Backens</a>.
 I am a member of the <a href="https://www.birmingham.ac.uk/research/activity/computer-science/theory-of-computation">University of Birmingham Theory Group</a>, and organise the research group's <a href="http://talks.bham.ac.uk/show/index/86">weekly seminar</a> alongside <a href="https://chrisbarrett2.github.io/">Chris Barrett</a>.</p>
 <p>Currently I also work part time at the <a href="https://blogs.ed.ac.uk/he-lab/">Huawei Edinburgh Programming Languages Lab</a>.</p>
